[package]
edition = "2018"
name = "hd"
version = "0.1.1"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
publish = false
description = "Print a hexdump of standard input"
categories = ["command-line-utilities"]
license = "BSD-3-Clause-Clear"
repository = "https://git.dragonma.us/dragonmaus/hd.rs"

[dependencies]
my = { git = "https://git.dragonma.us/dragonmaus/my.rs", version = "0.1" }
