[package]
name = "hd"
version = "0.1.1"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Print a hexdump of standard input"
repository = "https://git.dragonma.us/dragonmaus/hd.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "1" }
