[package]
name = "hd"
version = "1.1.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
rust-version = "1.35.0"
description = "Print a hexdump of standard input"
repository = "https://git.dragonma.us/rust/hd"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false
